src/test/deca/syntax/parser/invalid/invalid_float_format2.deca
// Test parser, invalid float format

{
    float x = 11e+;
}